bin/tests/snapshots/useless_parens__lint_518aa31f8b9a466e2e92490ffd87be423d3e42cf20c228150cef6c88bbd4fb11.snap
---
source: bin/tests/useless_parens.rs
expression: "\"let h = ({ inherit (builtins) map; }); in null\""
---
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:1:5]
   │
 1 │ let h = ({ inherit (builtins) map; }); in null
   ·     ─────────────────┬────────────────  
   ·                      ╰────────────────── h is never used
───╯
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:9]
   │
 1 │ let h = ({ inherit (builtins) map; }); in null
   ·         ──────────────┬──────────────  
   ·                       ╰──────────────── Useless parentheses around value in binding
───╯
