bin/tests/snapshots/useless_parens__lint_ed0b445d7f4db791ac8dcf41de7d3bc416d22cc4154b5a58ff82ce1fed6fd3c0.snap
---
source: bin/tests/useless_parens.rs
expression: "\"let a = 0; in (null)\""
---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:15]
   │
 1 │ let a = 0; in (null)
   ·               ───┬──  
   ·                  ╰──── Useless parentheses around body of let expression
───╯
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:1:5]
   │
 1 │ let a = 0; in (null)
   ·     ───┬──  
   ·        ╰──── a is never used
───╯
